--- a/RedWire/RedWire.vcxproj.filters
+++ b/RedWire/RedWire.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="src\Core\Cell.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Core\GridView.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Program.h">
@@ -45,6 +48,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\Core\Wire.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Core\GridView.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
