--- a/RedWire/RedWire.vcxproj
+++ b/RedWire/RedWire.vcxproj
@@ -155,7 +155,7 @@
     <ClCompile Include="src\Core\Gate.cpp" />
     <ClCompile Include="src\Core\GridView.cpp" />
     <ClCompile Include="src\core\Grid.cpp" />
-    <ClCompile Include="src\Core\Junction.cpp" />
+    <ClCompile Include="src\Core\Join.cpp" />
     <ClCompile Include="src\Core\Wire.cpp" />
     <ClCompile Include="src\Program.cpp" />
   </ItemGroup>
@@ -166,7 +166,7 @@
     <ClInclude Include="src\Core\GridView.h" />
     <ClInclude Include="src\Core\Grid.h" />
     <ClInclude Include="src\Core\Cell.h" />
-    <ClInclude Include="src\Core\Junction.h" />
+    <ClInclude Include="src\Core\Join.h" />
     <ClInclude Include="src\Core\Wire.h" />
     <ClInclude Include="src\Program.h" />
   </ItemGroup>
