--- a/RedWire/RedWire.vcxproj
+++ b/RedWire/RedWire.vcxproj
@@ -153,10 +153,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="src\Core\GridView.cpp" />
-    <ClCompile Include="src\Core\InputManager.cpp" />
+    <ClCompile Include="src\Interface\GridView.cpp" />
+    <ClCompile Include="src\Control\InputManager.cpp" />
     <ClCompile Include="src\Core\Area.cpp" />
-    <ClCompile Include="src\Core\CXMath.cpp" />
+    <ClCompile Include="src\CXMath.cpp" />
     <ClCompile Include="src\Core\Gate.cpp" />
     <ClCompile Include="src\core\Grid.cpp" />
     <ClCompile Include="src\Core\Join.cpp" />
@@ -164,23 +164,23 @@
     <ClCompile Include="src\Core\Region.cpp" />
     <ClCompile Include="src\Core\Wire.cpp" />
     <ClCompile Include="src\Application.cpp" />
-    <ClCompile Include="src\Core\TestUI.cpp" />
+    <ClCompile Include="src\Interface\TestUI.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\Core\GridView.h" />
-    <ClInclude Include="src\Core\InputManager.h" />
+    <ClInclude Include="src\Interface\GridView.h" />
+    <ClInclude Include="src\Control\InputManager.h" />
     <ClInclude Include="src\Core\Area.h" />
-    <ClInclude Include="src\Core\CXMath.h" />
+    <ClInclude Include="src\CXMath.h" />
     <ClInclude Include="src\Core\Port.h" />
     <ClInclude Include="src\Core\Region.h" />
-    <ClInclude Include="src\Core\Type2.h" />
+    <ClInclude Include="src\Type2.h" />
     <ClInclude Include="src\Core\Gate.h" />
     <ClInclude Include="src\Core\Grid.h" />
     <ClInclude Include="src\Core\Cell.h" />
     <ClInclude Include="src\Core\Join.h" />
     <ClInclude Include="src\Core\Wire.h" />
     <ClInclude Include="src\Application.h" />
-    <ClInclude Include="src\Core\TestUI.h" />
+    <ClInclude Include="src\Interface\TestUI.h" />
   </ItemGroup>
   <ItemGroup>
     <Font Include="Assets\Fonts\JetBrainsMono\JetBrainsMono-Bold.ttf" />
