--- a/RedWire/RedWire.vcxproj
+++ b/RedWire/RedWire.vcxproj
@@ -178,6 +178,7 @@
     <ClCompile Include="src\Core\Wire.cpp" />
     <ClCompile Include="src\Application.cpp" />
     <ClCompile Include="src\Interface\TestUI.cpp" />
+    <ClCompile Include="src\Interface\Toolbox.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Control\AreaSerializer.h" />
@@ -193,6 +194,8 @@
     <ClInclude Include="src\Core\Area.h" />
     <ClInclude Include="src\CXMath.h" />
     <ClInclude Include="src\Core\Port.h" />
+    <ClInclude Include="src\Interface\UserInterface.h" />
+    <ClInclude Include="src\Interface\Toolbox.h" />
     <ClInclude Include="src\Type2.h" />
     <ClInclude Include="src\Core\Gate.h" />
     <ClInclude Include="src\Core\Grid.h" />
