--- a/RedWire/RedWire.vcxproj
+++ b/RedWire/RedWire.vcxproj
@@ -159,6 +159,9 @@
     <ClCompile Include="imgui_draw.cpp" />
     <ClCompile Include="imgui_tables.cpp" />
     <ClCompile Include="imgui_widgets.cpp" />
+    <ClCompile Include="src\Control\LineTool.cpp" />
+    <ClCompile Include="src\Control\NoteAdder.cpp" />
+    <ClCompile Include="src\Core\Note.cpp" />
     <ClCompile Include="src\Control\AreaSerializer.cpp" />
     <ClCompile Include="src\Control\Clipboard.cpp" />
     <ClCompile Include="src\Control\GateAdder.cpp" />
@@ -181,6 +184,9 @@
     <ClCompile Include="src\Interface\Toolbox.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Control\LineTool.h" />
+    <ClInclude Include="src\Control\NoteAdder.h" />
+    <ClInclude Include="src\Core\Note.h" />
     <ClInclude Include="src\Control\AreaSerializer.h" />
     <ClInclude Include="src\Control\Clipboard.h" />
     <ClInclude Include="src\Control\GateAdder.h" />
