Changed some tools

--- a/RedWire/RedWire.vcxproj
+++ b/RedWire/RedWire.vcxproj
@@ -164,9 +164,8 @@
     <ClCompile Include="src\Core\Note.cpp" />
     <ClCompile Include="src\Control\AreaSerializer.cpp" />
     <ClCompile Include="src\Control\Clipboard.cpp" />
-    <ClCompile Include="src\Control\GateAdder.cpp" />
-    <ClCompile Include="src\Control\JoinAdder.cpp" />
-    <ClCompile Include="src\Control\HandTool.cpp" />
+    <ClCompile Include="src\Control\PortAdder.cpp" />
+    <ClCompile Include="src\Control\PowerTool.cpp" />
     <ClCompile Include="src\Control\RemoveTool.cpp" />
     <ClCompile Include="src\Control\Tool.cpp" />
     <ClCompile Include="src\Control\WireAdder.cpp" />
@@ -194,9 +193,8 @@
     <ClInclude Include="src\Core\Note.h" />
     <ClInclude Include="src\Control\AreaSerializer.h" />
     <ClInclude Include="src\Control\Clipboard.h" />
-    <ClInclude Include="src\Control\GateAdder.h" />
-    <ClInclude Include="src\Control\JoinAdder.h" />
-    <ClInclude Include="src\Control\HandTool.h" />
+    <ClInclude Include="src\Control\PortAdder.h" />
+    <ClInclude Include="src\Control\PowerTool.h" />
     <ClInclude Include="src\Control\RemoveTool.h" />
     <ClInclude Include="src\Control\Tool.h" />
     <ClInclude Include="src\Control\WireAdder.h" />
