--- a/RedWire/RedWire.vcxproj.filters
+++ b/RedWire/RedWire.vcxproj.filters
@@ -54,7 +54,7 @@
     <ClCompile Include="src\Control\PortAdder.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\Control\PowerTool.cpp">
+    <ClCompile Include="src\Control\SourceTool.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\Control\RemoveTool.cpp">
@@ -161,7 +161,7 @@
     <ClInclude Include="src\Control\PortAdder.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\Control\PowerTool.h">
+    <ClInclude Include="src\Control\SourceTool.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\Control\RemoveTool.h">
