--- a/RedWire/RedWire.vcxproj.filters
+++ b/RedWire/RedWire.vcxproj.filters
@@ -111,6 +111,9 @@
     <ClCompile Include="src\Core\Note.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Core\TickManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Core\Grid.h">
@@ -195,6 +198,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\Control\LineTool.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Core\TickManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
